--- a/app/src/main/res/layout/fragment_profile_photo.xml
+++ b/app/src/main/res/layout/fragment_profile_photo.xml
@@ -1,96 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.ProfilePhotoFragment">
+    tools:context=".Fragments.ProfilePhotoFragment"
+    android:id="@+id/photosSwitcher">
 
-    <ViewSwitcher
-        android:id="@+id/photosSwitcher"
+    <!-- шиммер -->
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:shimmer_auto_start="true"
+        app:shimmer_duration="1000">
 
-        <!-- шиммер -->
-
-        <com.facebook.shimmer.ShimmerFrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:shimmer_auto_start="true"
-            app:shimmer_duration="1000">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
 
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="3dp" />
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
 
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="3dp" />
-
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:orientation="horizontal">
-
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="3dp" />
-
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1"
-                        android:layout_marginEnd="3dp" />
-
-                    <View
-                        android:layout_width="133dp"
-                        android:layout_height="230dp"
-                        android:background="#E0E0E0"
-                        android:layout_weight="1" />
-
-                </LinearLayout>
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1" />
 
             </LinearLayout>
 
-        </com.facebook.shimmer.ShimmerFrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="3dp" />
+
+                <View
+                    android:layout_width="133dp"
+                    android:layout_height="230dp"
+                    android:background="#E0E0E0"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvPosts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/post_item" />
-    </ViewSwitcher>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPosts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/post_item"/>
+</ViewSwitcher>
